client/app.styl
// @require '../node_modules/vuetify/src/stylus/settings/_colors'
//
// $theme := {
//   primary: $blue.darken-2
//   accent: $red.accent-2
//   secondary: $grey.lighten-1
//   info: $blue.lighten-1
//   warning: $amber.darken-2
//   error: $red.accent-4
//   success: $green.lighten-2
// }
//
// $font-size-root := 14px

// @require '../node_modules/vuetify/src/stylus/main'
@require '../node_modules/vuetify/dist/vuetify.min.css'
@require './app.css'

body
  font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
  text-rendering optimizeLegibility
  font-size 14px
  margin 0
  word-spacing 0.05em
  line-height 1.5
  -webkit-font-smoothing auto
  background-color hsl(220, 13%, 18%)
  // background-color #fafafa
  // background-color lighten(#eceef1, 30%)
  // color #34495e
  // overflow-y scroll

*::selection
  background rgba(78,188,221,0.15)

// h1,h2,h3,h4,h5,h6
//   margin auto

a
  text-decoration none
  color rgb(134,142,150)
  &:hover
  &:active
  &:focus
    color #000

p
  margin 0

.application
  .list__tile__title
  .theme--light.navigation-drawer
  .theme--light.navigation-drawer .list
    color rgb(66, 66, 65)

  .menu__content--select
    .list__tile
      height 32px
      padding 0 10px
      font-size 13px !important

  .propbar
    .input-group--select
      .input-group__selections__comma
        font-size 13px !important


.application--dark
  // background-color hsl(220, 13%, 18%)
  // color hsl(220, 14%, 71%)
  *::selection
    background #2C93FA
    color #fff

  a
    color rgb(134,142,150)
    &:hover
    &:active
    &:focus
      color #fff

  .list__tile__title
    color #fff

.fade-enter-active, .fade-leave-active
  transition all .2s ease

.fade-enter, .fade-leave-active
  opacity 0


.cube
  position relative
  text-align center
  margin 10px auto
  padding 10px
  transition .3s cubic-bezier(.25,.8,.25,1)

  &[edit]:hover:after
    border 1px dotted #03a9f4 !important

  &[active]:after
    border 1px dashed rgba(0,0,0,.5) !important

.application--dark
  .cube
    &[active]:after
      border 1px dashed #4FFBFF !important


select
	appearance none
	background-color transparent
	border 1px solid #dddfe2
	border-radius 1px
	box-sizing inherit
	height 2.4rem
	padding 0 .5rem // The .6rem vertically centers text on FF, ignored by Webkit
	width 100%

	&:focus
		// border-color #666
		outline 0

$right-pane-width := 28em

.navigation-drawer--right
  width $right-pane-width

.navigation-drawer--persistent:not(.navigation-drawer--is-mobile).navigation-drawer--open.navigation-drawer--right:not(.navigation-drawer--clipped):not(.navigation-drawer--floating)+.toolbar
  padding-right $right-pane-width

.navigation-drawer--close:not(.navigation--permanent).navigation-drawer--right
  transform: translate3d($right-pane-width,0,0)

